# paralelas

./: README.md  miltidematrices.cpp
mpi/: matrix.c  sort.c
openMP/: app  app1  omp_odd_even.c  omp_odd_even_1.c  productor-consumidor.c
pthread/: CMakeLists.txt
pthread/src/: app  app1  app2  app3  link_list_Read_write.c  link_list_mutex_per_node.c  link_list_mutex_to_control.c  main.cpp  mul_mat_vec  mul_mat_vec.c  pth_tokenize.c  pth_tokenize_nice.c  text.txt
